# covtestsim

./: .gitignore  README.md  pyproject.toml  run_realdata.py  run_simulations.py  write_manuscript_section.py
formal_simulation_results/: README.md  curated_latest_results_summary.md  manifest.md
formal_simulation_results/summary/: size_main_combined_status.csv  study5_final_closeness.csv  study5_final_summary_wide.csv  study_power_studentized_search_final_power_wide.csv  study_power_studentized_search_final_summary_long.csv  study_power_studentized_search_final_top_gains.csv  study_power_target_eq05_final_paper_power.csv  study_power_target_eq05_final_power_table.md  study_power_target_eq05_final_summary_long.csv  study_power_target_eq0_final_paper_power.csv  study_power_target_eq0_final_power_table.md  study_power_target_eq0_final_summary_long.csv  study_power_target_eq0_final_summary_wide.csv  study_size_smalln_final_summary_long.csv  study_size_smalln_final_summary_wide.csv  study_size_smalln_inclusion_diagnostic.csv  study_size_target_final_paper_size.csv  study_size_target_final_size_tables.md  study_size_unbalanced_ratio_final_paper_size.csv  study_size_unbalanced_ratio_final_paper_size_wide.csv  study_size_unbalanced_ratio_final_summary_long.csv
formal_simulation_results/tables/: size_main_combined.csv  size_main_combined.tex  size_main_p100.csv  size_main_p200.csv  size_main_p200.tex  size_unbalanced_ratio_supp.csv  (+34 more)
scripts/: benchmark_acceleration.py  explore_studentization_power.py  package_formal_simulations.py
tests/: test_core.py
(+17 files in other folders)
