[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "covtestsim"
version = "0.1.0"
description = "Clean simulation restart for high-dimensional covariance tests."
requires-python = ">=3.10"
dependencies = [
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

